Bug 1331194 - Don't cancel wheel-scroll animations when starting a new wheel block. r=botond a=gchang

MozReview-Commit-ID: AU36ABfXYNQ

--HG--
extra : source : 3577c257fabeaf7e4ac2e692b103d54a252e0a4b