gfx/layers/apz/src/APZUtils.h
@@ -29,7 +29,8 @@ enum HitTestResult {
 enum CancelAnimationFlags : uint32_t {
   Default = 0x0,            /* Cancel all animations */
   ExcludeOverscroll = 0x1,  /* Don't clear overscroll */
-  ScrollSnap = 0x2          /* Snap to snap points */
+  ScrollSnap = 0x2,         /* Snap to snap points */
+  ExcludeWheel = 0x4,       /* Don't stop wheel smooth-scroll animations */
 };
 
 inline CancelAnimationFlags
